@@ -13,6 +13,7 @@ BUGFIX:
 GENERAL:
 * introduce class DefaultSecurityRule - extend on all parts
 * extend usage of DefaultSecurityRule to class Container/DeviceCloud/DeviceOnPrem
+* class DefaultSecurityRules - skip reading source/destination/from/to
 
 
 2.0.57 (20220905)
